sass/pages/course-details-by-city/course-details-by-city.module.scss
.mainContent {
    padding: 42px 0px 100px 0px;
    min-height: 400px;

    @media (max-width: 768px) {
        padding: 24px 0px 60px 0px;
    }

    @media (max-width: 480px) {
        padding: 16px 0px 40px 0px;
    }

    .content {
        display: grid;
        grid-template-columns: 1fr 3fr;
        gap: 24px;
        @media (max-width: 1024px) {
            grid-template-columns: 1fr;
        }

    

        .rightContent {
            display: flex;
            flex-direction: column;
            gap: 20px;

            .cards {
                display: grid;
                grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
                gap: 26px;

                @media (max-width: 1024px) and (min-width: 768px) {
                    grid-template-columns: repeat(2, 1fr);
                    gap: 20px;
                }

                @media (max-width: 767px) {
                    grid-template-columns: repeat(2, 1fr);
                    gap: 16px;
                }

                @media (max-width: 540px) {
                    grid-template-columns: 1fr;
                    gap: 16px;
                }
            }
   .noDataFound {
                    grid-column: 1 / -1;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    gap: 8px;
                    transition: $transition-base;
                    font-size: 16px;
                    font-weight: 500;
                    line-height: 20px;
                    text-decoration: none;
                    margin: 0px auto;
                    height: 100%;

                    @media (max-width: 480px) {
                        width: 100%;
                        font-size: 14px;
                        padding: 4px 20px;
                    }

                    &:hover {
                        background: transparent;
                        color: $blue-900;
                        transform: translateY(-2px);
                    }
                }
            .showMoreBtn {
                display: flex;
                justify-content: center;
                align-items: center;
                gap: 8px;
                margin: 30px auto 0;
                width: 283px;
                height: 48px;
                background-color: $white;
                color: $blue-900;
                font-size: 16px;
                font-weight: 500;
                line-height: 20px;
                border-radius: 10px;
                border: 1px solid $blue-900;
                cursor: pointer;
                transition: $transition-base;
                padding: 4px 30px;

                @media (max-width: 480px) {
                    width: 100%;
                    font-size: 14px;
                    padding: 4px 20px;
                    margin: 20px 0 0 0;
                }

                &:hover {
                    background: transparent;
                    color: $blue-900;
                    transform: translateY(-2px);
                }
            }
        }
    }
}
.filter {
    @media (max-width: 1024px) {
        display: none !important;
    }
}

